# genius

./: .cache  .env  .gitignore  README.md  manage.py  postgresql  pyproject.toml  requirements.txt  udo systemctl status nginx  ystemctl restart nginx
.github/workflows/: deploy.yml  django-ci.yml
myapp/: admin.py  forms.py  middlewares.py  models.py  serializers.py  spotify.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_song_album_song_lyrics_delete_track.py  0003_artist_aka_song_views_alter_artist_cover_picture.py  0004_news.py  0005_album_genre_album_views_artist_genre_artist_views_and_more.py  0006_song_cover_photo.py  0007_rename_cover_photo_song_song_cover.py  0008_news_detailed_description.py  0009_video.py  0010_remove_video_youtube_url_video_embed_code.py  0011_video_artist.py  0012_lyricline.py  0013_artist_crop_coords.py  0014_artist_instagram_artist_soundcloud_artist_spotify_and_more.py  0015_artist_telegram_artist_youtube.py  0016_remove_song_audio_file_artist_spotify_id_and_more.py  0017_artist_monthly_listeners_song_popularity.py  0018_alter_artist_monthly_listeners.py  0019_remove_song_popularity_remove_song_spotify_id.py  0020_remove_lyricline_meaning_lyricline_is_highlighted_and_more.py  0021_remove_lyricline_timestamp_remove_song_lyrics.py  (+3 more)
mygenius/: asgi.py  settings.py  urls.py  wsgi.py
static/: artist_profile.css
template/: album_details.html  artist_profile.html  home.html  login.html  navbar.html  news_detail.html  news_section.html  register.html  search_results.html  song_details.html  video_section.html
(+22 files in other folders)
